2008-08-03  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (MIN_POLL_INTERVAL): Use proper UTF-8 mu
	symbol for the unit in the comment.

2008-07-26  Guillem Jover  <guillem@debian.org>

	* src/Makefile.am (dpkg_SOURCES): Add 'pkg-show.c'.
	(dpkg_query_SOURCES): Likewise.
	* src/main.h (limiteddescription): New function prototype.
	* src/enquiry.c (limiteddescription): Move function to ...
	* src/pkg-show.c: ... here. New file.
	* src/query.c (limiteddescription): Remove duplicate function.

2008-07-26  Guillem Jover  <guillem@debian.org>

	* lib/showpkg.c (parseformat): Do not set cur->type to field, as
	that's set in parsefield.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/Makefile.am (dpkg_SOURCES): Add 'pkg-list.c'.
	(dpkg_query_SOURCES): Likewise.
	* src/enquiry.c (pkglistqsortcmp): Move function to ...
	* src/pkg-list.c: ... here. New file.
	* src/query.c (pkglistqsortcmp): Remove duplicate function.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (struct pkg_deconf_list): Move declaration ...
	* src/archives.h: ... here.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (struct packageinlist): Rename to ...
	(struct pkg_deconf_list): ... this. Fix all users.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (struct packageinlist): Change 'void *xinfo' member to
	'struct pkginfo *pkg_removal'. Fix all users.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/main.h (ignoredependss): Change type to 'struct pkginqueue'.
	* src/main.c (ignoredependss): Likewise.
	(ignoredepends): Change type for variable 'ni' to 'struct pkginqueue'.
	* src/help.c (ignore_depends): Likewise.

2008-07-22  Guillem Jover  <guillem@debian.org>

	* src/query.c (ignoredependss): Remove unused variable.

2008-07-10  Raphael Hertzog  <hertzog@debian.org>

	* man/dpkg-buildpackage.1: Give a detailed explanation of what the
	command does. Drop any duplicate information contained in the