@@ -1,5 +1,10 @@
 2008-08-03  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c: Move the different implementations
+	of the same function for different operating systems together.
+
+2008-08-03  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (MIN_POLL_INTERVAL): Use proper UTF-8 mu
 	symbol for the unit in the comment.
 
